--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,59 @@
-.flex-content {
+html,body {
     font-family: 'Khula', sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: ghostwhite;
+}
 
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.flex-content {
+    vertical-align: middle;
+    width: 280px;
+}
+
+.head {
+    height: 80px;
+    border-top-left-radius: 44px;
+    border-top-right-radius: 44px;
+}
+
+.content {
+    height: 200px;
+    padding: 9% 7% 40% 7%;
+    border-bottom-left-radius: 44px;
+    border-bottom-right-radius: 44px;
+    text-align: center;
+}
+
+.screen-case {
+    height: 42px;
+    background-color: darkgray;
+    padding: 3%;
+    border-radius: 5px;
+    margin-bottom: 5%;
+}
+
+.screen {
+    border-style: none;
+    width: 100%;
+    height: 40px;
+    font-weight: 800;
+    font-size: 30px;
+    text-align: right;
+    color: white;
+}
+
+hr {
+    background: white;
+    height: 2px;
+    border-style: none;
 }
 
 .gray-dark {
@@ -12,5 +65,28 @@
 }
 
 .gray-green {
-    
+    background-color: darkslategray;
+}
+
+.gray-soft {
+    background-color: #bac7b6;
+}
+
+.gold {
+    background-color: #F0c50f;
+}
+
+input[type="button"], button {
+    border-radius: 50%;
+    border-style: none;
+    width: 19%;
+    height: 21%;
+    margin: 2%;
+    color: white;
+    font-weight: 800;
+    font-size: 15px;
+}
+
+button:focus, input:focus {
+    outline: none;
 }
